--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shimele.github.io/React-Pic-Commerce-Site",
+  "homepage": "https://shimele.github.io/React-Picture-Commerce-Site",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
